Big refactoring - float Colors, numpy, and more...
 * Changed Color struct to use real_t instead of uint8_t
 * Added alpha channel to Color for easier Blender integration
 * Use numpy for pixel data conversion in both gui app and blender addon
 * Moved camera ray generation and shading to separate functions
 * Added 'normal' member to IntersectionData
 * Made VENV_PATH a cache variable
 * Added env. variable for loading the library
 * Added timers to python implementations

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,23 +36,15 @@ target_compile_definitions(${TARGET_LIB_NAME} PRIVATE ChaosRendererEXPORTS)
 install(TARGETS ${TARGET_LIB_NAME} DESTINATION lib)
 
 # Install lib headers when needed - currently in a shared folder with app
-#set(LIB_HEADERS)
 #install(FILES ${LIB_HEADERS} DESTINATION include/${TARGET_LIB_NAME})
 
 # Add a way to start the Python GUI directly from VS
 if ("${CMAKE_GENERATOR}" MATCHES "Visual Studio")
-    #set(VENV_PATH CACHE "${CMAKE_CURRENT_SOURCE_DIR}/.venv" STRING "Path to the Python virtual environment")
-    set(VENV_PATH "${CMAKE_CURRENT_SOURCE_DIR}/.venv")
-
-    #add_custom_target(RUN_PYTHON_GUI
-    #    COMMAND ${CMAKE_COMMAND} --build ${CMAKE_BINARY_DIR} --target ${TARGET_LIB_NAME}
-    #    COMMAND cmd /c "call ${VENV_PATH}\\Scripts\\activate.bat && python ${CMAKE_CURRENT_SOURCE_DIR}/../gui/gui.py"
-    #    COMMENT "Run Python GUI"
-    #)
-
+    set(VENV_PATH "${CMAKE_CURRENT_SOURCE_DIR}/.venv" CACHE PATH "Path to the Python virtual environment")
     set_target_properties(${TARGET_LIB_NAME} PROPERTIES
         VS_DEBUGGER_COMMAND "cmd.exe"
         VS_DEBUGGER_COMMAND_ARGUMENTS "/c \"call ${VENV_PATH}\\Scripts\\activate.bat && python ${CMAKE_CURRENT_SOURCE_DIR}/python-gui/gui.py\""
+        VS_DEBUGGER_ENVIRONMENT "CHAOS_RAYTRACING_LIB_PATH=$<TARGET_FILE_DIR:${TARGET_LIB_NAME}>"
     )
 endif()
 
