Removed the VENV_PATH variable from cache

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,7 +45,7 @@ install(TARGETS ${TARGET_LIB_NAME} DESTINATION lib)
 option(SETUP_PYTHON_ENV "Whether to setup the Python environment. Python 3 with tkinter required." ON)
 if (SETUP_PYTHON_ENV)
     set(PYTHON_EXECUTABLE "python.exe" CACHE PATH "Path to the Python executable ")
-    set(VENV_PATH "${CMAKE_BINARY_DIR}/.venv" CACHE PATH "Where to create the Python virtual environment")
+    set(VENV_PATH "${CMAKE_BINARY_DIR}/.venv")
     execute_process(COMMAND ${PYTHON_EXECUTABLE} "-m" "venv" "${VENV_PATH}")
     execute_process(COMMAND "${VENV_PATH}/Scripts/pip" "install" "pillow" "customtkinter" "CTkColorPicker" "numpy")
 endif()
